--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -37,6 +37,7 @@
         </nav>
         {% block body %}
         {% endblock body %}
+        <div style="height: 20vh !important"></div>
         <footer id="footer" class="d-flex p-4 bg-dark fixed-bottom text-light">
             <div>
                 <b>&copy; 2024, IT Meýdança Quizz,</b> Ähli hukuklar goralan
