--- a/easy_admin/templates/add_question.html
+++ b/easy_admin/templates/add_question.html
@@ -4,22 +4,11 @@
     "{{ challenge.name }}" testine sorag goşmak
 {% endblock title %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/toggle.css' %}">
+    {{ form.media }}
 {% endblock head %}
 {% block body %}
     <div class="container my-4">
         <div class="row bg-light rounded p-2">
-            <div class="d-flex justify-content-center">
-                <div class="toggle">
-                    <input type="radio" id="choice1" name="choice">
-                    <label for="choice1">Surat</label>
-                    <input type="radio" id="choice2" name="choice">
-                    <label style="padding-left: 60px;" for="choice2">Tekst</label>
-                    <div id="flap">
-                        <span class="content">Tekst</span>
-                    </div>
-                </div>
-            </div>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %} {{ form }}
                 <div class="d-flex">
@@ -31,7 +20,6 @@
 {% endblock body %}
 {% block scripts %}
     {{ challenge.pk|json_script:"challenge-id" }}
-    <script src="{% static 'js/add_question.js' %}"></script>
     <script>
     let challenge = JSON.parse(document.getElementById('challenge-id').textContent);
     let select = document.querySelector("#id_challenge");
