--- a/challenge/templates/views/home.html
+++ b/challenge/templates/views/home.html
@@ -7,6 +7,9 @@
     <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}">Testler</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout_view' %}">Çykyş</a>
+    </li>
 {% endblock navbar %}
 {% block body %}
     <div class="row my-4">
