--- a/challenge/templates/views/results.html
+++ b/challenge/templates/views/results.html
@@ -10,6 +10,9 @@
     <li class="nav-item active">
         <a class="nav-link" role="button">Netije</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout_view' %}">Çykyş</a>
+    </li>
 {% endblock navbar %}
 {% block body %}
     <div class="row my-3 justify-content-center">
